--- a/lab-intro_to_ml.ipynb
+++ b/lab-intro_to_ml.ipynb
@@ -1253,6 +1253,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1-score:  0.7863866763215062\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# Predice las etiquetas del conjunto de prueba\n",
+    "y_pred = knn.predict(X_test)\n",
+    "\n",
+    "# Calcula el F1-score\n",
+    "f1 = f1_score(y_test, y_pred, average='binary')\n",
+    "\n",
+    "print(\"F1-score: \", f1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
